cluster/manifests/loki/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    name: loki
    pod-security.kubernetes.io/enforce: restricted
