cluster/manifests/loki/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-mc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: mc
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./loki-minio.loki.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-distributor
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: distributor
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-querier
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: querier
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-query-frontend
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: query-frontend
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./loki-mcrouter.loki.svc.cluster.local
        - ./loki-querier.loki.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-query-scheduler
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: query-scheduler
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-compactor
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: compactor
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-index-gateway
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: index-gateway
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-ingester
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: ingester
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-ruler
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: ruler
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - mimir/mimir-alertmanager.mimir.svc.cluster.local
        - mimir/mimir-distributor.mimir.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: loki-proxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: proxy
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./loki-query-frontend.loki.svc.cluster.local
        - ./loki-ruler.loki.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
