cluster/manifests/loki/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-distributor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: distributor
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: fluentd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: fluentd-aggregator
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-mcrouter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: mcrouter
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: loki
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
      ports:
        - protocol: TCP
          port: 5000
